--- a/styles/styles.css
+++ b/styles/styles.css
@@ -38,7 +38,7 @@ html{
     margin: 0;
     box-sizing: border-box;
 }
-/* Class selectors */
+/* Class Selectors */
  .box{
     padding: 1rem;
     width: 15rem;
