--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -12,3 +12,47 @@
     --nav-hover-link-color: #32729b;
     --nav-hover-background-color: #38aecc;
 }
+h1, h2, h3, h4, h5, h6 {
+    font-family: var(--heading-font);
+    color: var(--primary-color);
+}
+p{
+    font-family: var(--heading-font);
+    color: #ffff;
+    padding: 1rem;
+    background-color: var(--primary-color);
+}
+nav{
+    margin: 2rem;
+}
+.logo{
+    background-color: var(--accent1-color);
+    border: 4px solid rgba(0, 0, 0, 0.589);
+    
+}
+.navs{
+    background-color:#489fab;
+}
+.nav_border{
+    position:relative;
+    top: -5px;
+    left: -32px;
+}
+a{
+    padding: .5rem;
+    background-color: var(--primary-color);
+    border: 4px solid rgba(0, 0, 0, 0.589);
+}
+html{
+    background-color:#0090C1;
+}
+footer{
+    text-align: center;
+    padding: 1rem;
+    background-color: #245e84;
+}
+.hero img {
+    display: block;
+    width: 50%;
+    height: auto;
+}
