--- a/styles/styles.css
+++ b/styles/styles.css
@@ -58,9 +58,10 @@ aside h2{
     left: 100px;
 }
 
-*header, footer, .grid{
+header, footer, .grid{
     margin:0 auto;
-    max-width:840px;
+    
+    max-width:2040px;
 }
 nav{
     display: flex;
