--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,5 @@
 main{
-    max-width: 840;
+    max-width: 840px;
     border: 4px solid rgba(0, 0, 0, 0.589);
     padding: 1rem;
     background-color: #227c7c;
