--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 :root {
-    --primary-color: #022f40;
+    --primary-color: #227c7c;
     --secondary-color: #0090C1;
-    --accent1-color: #046E8F;
+    --accent1-color: #127372;
     --accent2-color: #38AECC;
     --additional-accent-color: 183446;
     --heading-font: "Bebas Neue", sans-serif;
@@ -12,47 +12,173 @@
     --nav-hover-link-color: #32729b;
     --nav-hover-background-color: #38aecc;
 }
+html, body, main{
+    max-width: 1040px;
+}
 h1, h2, h3, h4, h5, h6 {
     font-family: var(--heading-font);
     color: var(--primary-color);
 }
 p{
+    border: 4px solid #1b4848;
     font-family: var(--heading-font);
     color: #ffff;
     padding: 1rem;
     background-color: var(--primary-color);
 }
-nav{
-    margin: 2rem;
-}
-.logo{
-    background-color: var(--accent1-color);
-    border: 4px solid rgba(0, 0, 0, 0.589);
-    
-}
-.navs{
-    background-color:#489fab;
-}
-.nav_border{
+header nav{
+    display:grid;
+    grid-template-columns: 6fr 6fr 6fr 6fr;
+    width: 39rem;
+    height: 0.2rem;
+    font-family: var(--heading-font);
+    text-decoration: none;
     position:relative;
-    top: -5px;
-    left: -32px;
+    top: 60px;
+    left: 100px;
 }
-a{
-    padding: .5rem;
-    background-color: var(--primary-color);
-    border: 4px solid rgba(0, 0, 0, 0.589);
+header nav a{
+    color: white;
+}
+header{
+    display:flex;
+    background-color: var(--accent1-color);
+    margin: 5px;
+    width:67rem;
+    justify-content:center;
+    height: 200px;
+    border: 4px solid #1b4848;
+    position:relative;
+    left: 70px;
 }
 html{
-    background-color:#0090C1;
+    background-color:#4acbc0;
 }
 footer{
     text-align: center;
+    padding: 0.5rem;
+    height: 10%;
+    position:relative;
+    left: 70px;
+    width: 67rem;
+    top: 100px;
+}
+article p{
+    box-sizing:content-box;
+    height: 200px;
+    width: 100%;
     padding: 1rem;
-    background-color: #245e84;
+    float:left;
+}
+section p{
+    text-align:left;
+    box-sizing:content-box;
+    height: 200px;
+    width: 100%;
+    padding: 1rem;
+    float:left;
+}
+/*class selectors*/
+.top_links{
+    font-size:larger;
+    padding: 1rem;
+    background-color: var(--accent1-color);
+    border: 4px solid rgba(0, 0, 0, 0.589);
+    text-align:center;
+
+}
+.socials{
+    display:flex;
+    justify-content:space-between;
+    padding: 1rem;
+    float:right;
+    position:relative;
+    top:-52px;
+}
+.hero{
+    display:flex;
+    position:relative;
+    left: -10px;
 }
 .hero img {
-    display: block;
-    width: 50%;
+    width: 15%;
     height: auto;
+    float:right;
+    position:absolute;
+    z-index: 100;
+    top: 100px;
+    left: 970px;
+}
+.hero h1{
+    text-align:center;
+    position:absolute;
+    width: 15rem;
+    top: -20px;
+    left: 520px;
+}
+.hero p{
+    display:flex;
+    justify-content: center;
+    position:relative;
+    width:1000px;
+    top: 30px;
+    left: 110px;
+}
+.worker{
+    display:flex;
+    position:relative;
+    left: -10px;
+    top: 0px;
+    clear:left;
+}
+.worker img {
+    width: 13%;
+    height: auto;
+    float:right;
+    position:absolute;
+    z-index: 100;
+    top:90px;
+    left: 970px;
+}
+.worker h2{
+    text-align:center;
+    position:absolute;
+    width: 65rem;
+    top: -5px;
+    left: 105px;
+    background-color: var(--primary-color);
+    color: white;
+}
+.worker p{
+    display:flex;
+    position:relative;
+    width:1500px;
+    top: 30px;
+    left: 110px;
+}
+.customer_pictures{
+    left:-20px;
+    display:flex;
+    justify-content: space-between;
+    position:relative;
+    padding: .5rem;  
+}
+.customer_pictures img{
+    top: 100px;
+    left: 40px;
+    background-color: var(--primary-color);
+    border: 10px solid var(--primary-color);
+    box-sizing:content-box;
+    border: 4px solid #1b4848;
+}
+.adv_title{
+    border: 4px solid #1b4848;
+    text-align:center;
+    position:absolute;
+    z-index:100;
+    width: 1000px;
+    top: 60px;
+    left: 140px;
+    background-color: var(--primary-color);
+    color: white;
 }
