--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -78,6 +78,12 @@ section p{
     padding: 1rem;
     float:left;
 }
+figcaption{
+    font-family: var(--heading-font);
+    color:white;
+    position:relative;
+    left: 10px;
+}
 /*class selectors*/
 .top_links{
     font-size:larger;
@@ -159,17 +165,21 @@ section p{
 .customer_pictures{
     left:-20px;
     display:flex;
-    justify-content: space-between;
     position:relative;
-    padding: .5rem;  
+    padding: 1rem;  
+    width: 130%;
 }
-.customer_pictures img{
+.customer_pictures figure{
     top: 100px;
-    left: 40px;
+    left: -30px;
+    width:50%;
     background-color: var(--primary-color);
     border: 10px solid var(--primary-color);
-    box-sizing:content-box;
+    padding:1rem;
     border: 4px solid #1b4848;
+}
+.customer_pictures img{
+    width:70%;
 }
 .adv_title{
     border: 4px solid #1b4848;
