--- a/wwr/styles/contact.css
+++ b/wwr/styles/contact.css
@@ -89,7 +89,7 @@ ul{
 }
 button{
     background-color:#4b9998;
-    border:#022f40 5px solid;
+    border: 4px outset rgba(0, 0, 0, 0.589);
     border-radius: 2rem;
 }
 button:hover{
@@ -118,8 +118,14 @@ button:hover{
 }
 
 .hero h2, .hero h1{
+    margin:0px;
+    -webkit-text-stroke-width:.2px;
+    -webkit-text-stroke-color:rgba(0, 0, 0, 0.589);
     text-align:center;
     justify-content:center;
+    background-color:var(--primary-color);
+    color:white;
+    border: 4px outset rgba(0, 0, 0, 0.589);
 }
 .hero p{
     display: grid;
@@ -127,6 +133,12 @@ button:hover{
     width:1000px;
     height: 30rem;
     flex-flow: column;
+}
+.service{
+    width:1100px;
+}
+.employees{
+    display:flex;
 }
 .employees figure{
     border: 4px solid #1b4848;
