--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -100,6 +100,7 @@ figcaption{
     float:right;
     position:relative;
     top:-52px;
+    left:-30px;
 }
 .hero{
     display:flex;
@@ -192,3 +193,16 @@ figcaption{
     background-color: var(--primary-color);
     color: white;
 }
+.wireframe{
+    display:flex;
+    justify-content:space-between;
+    padding: 1rem;
+    float:right;
+    position:relative;
+    top:20px;
+    font-family:var(--default-font);
+    text-decoration:none;
+    color: white;
+}
+.wireframe:hover{
+    color: #b6b4b4;
